# mcp

./: singleflowagent.py
employee/: main.py  pyproject.toml  server.py  test.py
mcpfastapi/: mlapi.py  pyproject.toml  sample.json
